# cmake_experiments

./: CMakeLists.txt  README.md  build.sh  main.cpp
myBsp/: CMakeLists.txt
myImplementationLib/: CMakeLists.txt  Makefile  MyLib.cpp
myImplementationLibA/: MyLib.hpp
myInterfaceLib/: CMakeLists.txt  CommonTypes.hpp
myToolchain/: toolchainfile.txt
